@@ -46,6 +46,12 @@ NEW FEATURES
     o	The --internet2 command line option sets a flag internally;
 	that flag is now visible and controllable from R using the
 	setInternet2() function.
+	
+	
+BUG FIXES
+
+    o	Topics marked as "internal" in help files were not visible
+    	from CHM help.
 
 
 
